Add support for Hive 2 (#230)
Fix some automation tests when data prep was incorrect
Allow new Hive 2.3.6 jars to access Hive 1 and Hive 2
Refactor HiveUtilities into HiveClientWrapper.
Add parameter for the machine type in the dataproc cluster. Use smaller dataproc instances.

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -203,19 +203,44 @@ project('pxf-hive') {
     dependencies {
         compile(project(':pxf-api'))
         compile(project(':pxf-hdfs'))
-        compile("org.apache.hive:hive-exec:${hiveVersion}") {
+        compile("org.apache.hive:hive-exec:${hiveVersion}:core") {
             exclude module: 'calcite-core'
             exclude module: 'calcite-avatica'
             exclude module: 'guava'
         }
-        bundleJars "org.apache.hive:hive-metastore:${hiveVersion}"
-        bundleJars "org.apache.hive:hive-serde:${hiveVersion}"
+        compile("org.apache.hive:hive-metastore:${hiveVersion}")
+        compile("org.apache.hive:hive-serde:${hiveVersion}")
+        compile("com.esotericsoftware:kryo:3.0.3")
+        /*
+         * Transitive dependencies for hive-exec-core. Instead of bundling,
+         * hive-exec, hive-exec-core is used to avoid conflict with other
+         * dependencies included in hive-exec (i.e Parquet) which were causing
+         * other tests to fail.
+         * */
+        bundleJars "org.apache.hive:hive-common:${hiveVersion}"
+        bundleJars "org.apache.hive.shims:hive-shims-common:${hiveVersion}"
+        bundleJars "org.apache.hive.shims:hive-shims-0.23:${hiveVersion}"
+        bundleJars "org.apache.commons:commons-lang3:3.1"
+        bundleJars "org.apache.hive:hive-storage-api:2.4.0"
+        bundleJars "org.apache.orc:orc-core:1.3.4"
+        bundleJars "io.airlift:aircompressor:0.8"
+        bundleJars "joda-time:joda-time:2.8.1"
+        bundleJars "org.objenesis:objenesis:2.1"
+        bundleJars "com.esotericsoftware:kryo:3.0.3"
+        bundleJars "com.esotericsoftware:minlog:1.3.0"
+        bundleJars "com.esotericsoftware:reflectasm:1.11.6"
         bundleJars "org.apache.thrift:libfb303:0.9.3"
-        bundleJars "org.antlr:antlr-runtime:3.4"
-        bundleJars "org.datanucleus:datanucleus-api-jdo:4.2.1"
-        bundleJars "org.datanucleus:datanucleus-core:4.1.6"
+        bundleJars "org.apache.thrift:libthrift:0.9.3"
+        bundleJars "org.antlr:antlr-runtime:3.5.2"
+        bundleJars "org.datanucleus:datanucleus-api-jdo:4.2.4"
+        bundleJars "org.datanucleus:datanucleus-core:4.1.17"
         bundleJars "org.xerial.snappy:snappy-java:1.0.5"
         bundleJars "javax.jdo:jdo-api:3.0.1"
+        bundleJars "org.codehaus.jackson:jackson-core-asl:1.9.13"
+        bundleJars "org.codehaus.jackson:jackson-mapper-asl:1.9.13"
+        /*
+         * Transitive dependencies for hive-exec-core until here
+         * */
     }
 }
 
