--- a/concourse/pipelines/6x-release_pipeline-generated.yml
+++ b/concourse/pipelines/6x-release_pipeline-generated.yml
@@ -93,7 +93,7 @@ ccp_destroy_anchor: &ccp_destroy
 
 dataproc_destroy_anchor: &dataproc_destroy
   do:
-  - aggregate:
+  - in_parallel:
     - task: cleanup_dataproc
       config:
         run:
@@ -298,7 +298,7 @@ jobs:
 
 - name: compile_pxf
   plan:
-  - aggregate:
+  - in_parallel:
     - get: gpdb_src
     - get: pxf_src
       trigger: true
@@ -312,7 +312,7 @@ jobs:
 
 - name: test_pxf_hdp2_centos6
   plan:
-  - aggregate:
+  - in_parallel:
     - get: gpdb_src
       passed:
       - compile_pxf
@@ -341,7 +341,7 @@ jobs:
 
 - name: test_pxf_mapr_centos6
   plan:
-  - aggregate:
+  - in_parallel:
     - get: gpdb_src
       passed:
       - compile_pxf
@@ -369,7 +369,7 @@ jobs:
 
 - name: test_pxf_hdp3_centos7
   plan:
-  - aggregate:
+  - in_parallel:
     - get: gpdb_src
       passed:
       - compile_pxf
@@ -398,7 +398,7 @@ jobs:
 
 - name: test_pxf_hdp2_centos7_java11
   plan:
-  - aggregate:
+  - in_parallel:
     - get: gpdb_src
       passed:
       - compile_pxf
@@ -428,7 +428,7 @@ jobs:
 
 - name: test_pxf_hdp2_ubuntu18
   plan:
-  - aggregate:
+  - in_parallel:
     - get: gpdb_src
       passed:
       - compile_pxf
@@ -458,7 +458,7 @@ jobs:
 
 - name: test_pxf_hdp2_secure_with_impersonation
   plan:
-  - aggregate:
+  - in_parallel:
     - get: gpdb_src
       passed:
       - compile_pxf
@@ -489,7 +489,7 @@ jobs:
 
 - name: test_pxf_hdp2_secure_no_impersonation
   plan:
-  - aggregate:
+  - in_parallel:
     - get: gpdb_src
       passed:
       - compile_pxf
@@ -564,7 +564,7 @@ jobs:
       BUCKET_NAME: {{tf-bucket-name}}
       PLATFORM: centos7
       CLOUD_PROVIDER: google
-  - aggregate:
+  - in_parallel:
     - task: intialize_greenplum
       file: ccp_src/ci/tasks/gpinitsystem.yml
     - task: install_hadoop
@@ -609,7 +609,7 @@ jobs:
 - name: test_pxf_secure_multinode_gpdb
   max_in_flight: 2
   plan:
-  - aggregate:
+  - in_parallel:
     - get: ccp_src
     - get: gpdb_src
       passed:
@@ -626,7 +626,7 @@ jobs:
       trigger: true
     - get: ccp-7
     - get: gpdb-pxf-dev-centos6-hdp2-server
-  - aggregate:
+  - in_parallel:
     - do:
       - put: terraform_gpdb
         resource: terraform
@@ -706,7 +706,7 @@ jobs:
 
 - name: test_pxf_cdh_centos6
   plan:
-  - aggregate:
+  - in_parallel:
     - get: gpdb_src
       passed:
       - compile_pxf
@@ -735,7 +735,7 @@ jobs:
 
 - name: test_pxf_s3_no_impersonation
   plan:
-  - aggregate:
+  - in_parallel:
     - get: gpdb_src
       passed:
       - compile_pxf
@@ -765,7 +765,7 @@ jobs:
 
 - name: test_pxf_s3_with_impersonation
   plan:
-  - aggregate:
+  - in_parallel:
     - get: gpdb_src
       passed:
       - compile_pxf
@@ -795,7 +795,7 @@ jobs:
 
 - name: test_pxf_minio
   plan:
-  - aggregate:
+  - in_parallel:
     - get: gpdb_src
       passed:
       - compile_pxf
@@ -823,7 +823,7 @@ jobs:
 
 - name: test_pxf_adl
   plan:
-  - aggregate:
+  - in_parallel:
     - get: gpdb_src
       passed:
       - compile_pxf
@@ -855,7 +855,7 @@ jobs:
 
 - name: test_pxf_gs
   plan:
-  - aggregate:
+  - in_parallel:
     - get: gpdb_src
       passed:
       - compile_pxf
@@ -884,7 +884,7 @@ jobs:
 
 - name: test_pxf_no_impersonation
   plan:
-  - aggregate:
+  - in_parallel:
     - get: gpdb_src
       passed:
       - compile_pxf
