--- a/concourse/pipelines/templates/pxf-tpl.yml
+++ b/concourse/pipelines/templates/pxf-tpl.yml
@@ -112,7 +112,7 @@ ccp_destroy_anchor: &ccp_destroy
 
 dataproc_destroy_anchor: &dataproc_destroy
   do:
-  - aggregate:
+  - in_parallel:
     - task: cleanup_dataproc
       config:
         run:
@@ -484,7 +484,7 @@ jobs:
 {% if compile_gpdb %}
 - name: compile_gpdb_centos6
   plan:
-  - aggregate:
+  - in_parallel:
     - get: gpdb_src
     - get: gpdb-centos6-build
 {% if gpdb_branch == '5X_STABLE' %}
@@ -528,7 +528,7 @@ jobs:
 {% endif %}
 - name: compile_pxf
   plan:
-  - aggregate:
+  - in_parallel:
     - get: gpdb_src
 {% if pipeline_type == "pxf" %}
     - get: gpdb_pxf_trigger
@@ -547,7 +547,7 @@ jobs:
 {% if pipeline_type == "release" %}
 - name: test_pxf_hdp2_centos6
   plan:
-  - aggregate:
+  - in_parallel:
     - get: gpdb_src
       passed:
       - compile_pxf
@@ -587,7 +587,7 @@ jobs:
 
 - name: test_pxf_mapr_centos6
   plan:
-  - aggregate:
+  - in_parallel:
     - get: gpdb_src
       passed:
       - compile_pxf
@@ -625,7 +625,7 @@ jobs:
 
 - name: test_pxf_hdp3_centos7
   plan:
-  - aggregate:
+  - in_parallel:
     - get: gpdb_src
       passed:
       - compile_pxf
@@ -668,7 +668,7 @@ jobs:
 
 - name: test_pxf_hdp2_centos7_java11
   plan:
-  - aggregate:
+  - in_parallel:
     - get: gpdb_src
       passed:
       - compile_pxf
@@ -713,7 +713,7 @@ jobs:
 {% if gpdb_type == "5X_STABLE" %}
 - name: test_pxf_hdp2_ubuntu16
   plan:
-  - aggregate:
+  - in_parallel:
     - get: gpdb_src
       passed:
       - compile_pxf
@@ -746,7 +746,7 @@ jobs:
 {% else %}
 - name: test_pxf_hdp2_ubuntu18
   plan:
-  - aggregate:
+  - in_parallel:
     - get: gpdb_src
       passed:
       - compile_pxf
@@ -780,7 +780,7 @@ jobs:
 
 - name: test_pxf_hdp2_secure_with_impersonation
   plan:
-  - aggregate:
+  - in_parallel:
     - get: gpdb_src
       passed:
       - compile_pxf
@@ -822,7 +822,7 @@ jobs:
 {% if pipeline_type == "release" %}
 - name: test_pxf_hdp2_secure_no_impersonation
   plan:
-  - aggregate:
+  - in_parallel:
     - get: gpdb_src
       passed:
       - compile_pxf
@@ -915,7 +915,7 @@ jobs:
       BUCKET_NAME: {{tf-bucket-name}}
       PLATFORM: centos7
       CLOUD_PROVIDER: google
-  - aggregate:
+  - in_parallel:
     - task: intialize_greenplum
       file: ccp_src/ci/tasks/gpinitsystem.yml
     - task: install_hadoop
@@ -966,7 +966,7 @@ jobs:
 - name: test_pxf_secure_multinode_gpdb
   max_in_flight: 2
   plan:
-  - aggregate:
+  - in_parallel:
     - get: ccp_src
     - get: gpdb_src
       passed:
@@ -990,7 +990,7 @@ jobs:
       trigger: true
     - get: ccp-7
     - get: gpdb-pxf-dev-centos6-hdp2-server
-  - aggregate:
+  - in_parallel:
     - do:
       - put: terraform_gpdb
         resource: terraform
@@ -1073,7 +1073,7 @@ jobs:
 
 - name: test_pxf_cdh_centos6
   plan:
-  - aggregate:
+  - in_parallel:
     - get: gpdb_src
       passed:
       - compile_pxf
@@ -1112,7 +1112,7 @@ jobs:
 
 - name: test_pxf_s3_no_impersonation
   plan:
-  - aggregate:
+  - in_parallel:
     - get: gpdb_src
       passed:
       - compile_pxf
@@ -1152,7 +1152,7 @@ jobs:
 
 - name: test_pxf_s3_with_impersonation
   plan:
-  - aggregate:
+  - in_parallel:
     - get: gpdb_src
       passed:
       - compile_pxf
@@ -1193,7 +1193,7 @@ jobs:
 {% if pipeline_type == "release" %}
 - name: test_pxf_minio
   plan:
-  - aggregate:
+  - in_parallel:
     - get: gpdb_src
       passed:
       - compile_pxf
@@ -1231,7 +1231,7 @@ jobs:
 
 - name: test_pxf_adl
   plan:
-  - aggregate:
+  - in_parallel:
     - get: gpdb_src
       passed:
       - compile_pxf
@@ -1273,7 +1273,7 @@ jobs:
 
 - name: test_pxf_gs
   plan:
-  - aggregate:
+  - in_parallel:
     - get: gpdb_src
       passed:
       - compile_pxf
@@ -1313,7 +1313,7 @@ jobs:
 
 - name: test_pxf_no_impersonation
   plan:
-  - aggregate:
+  - in_parallel:
     - get: gpdb_src
       passed:
       - compile_pxf
