--- a/concourse/pipelines/pg_regress_pipeline.yml
+++ b/concourse/pipelines/pg_regress_pipeline.yml
@@ -90,7 +90,7 @@ jobs:
   plan:
   - get: pxf_src
     trigger: true
-  - aggregate:
+  - in_parallel:
     - get: gpdb_src
       trigger: true
     - get: gpdb-pxf-dev-centos7
@@ -102,7 +102,7 @@ jobs:
 
 - name: compile_gpdb
   plan:
-  - aggregate:
+  - in_parallel:
     - get: gpdb_src
       params: { submodules: all, submodules_recursive: true }
       trigger: true
@@ -129,7 +129,7 @@ jobs:
 
 - name: test_pxf
   plan:
-  - aggregate:
+  - in_parallel:
     - get: pxf_src
       passed:
         - compile_pxf
@@ -169,7 +169,7 @@ jobs:
 
 - name: test_pxf_s3
   plan:
-  - aggregate:
+  - in_parallel:
     - get: pxf_src
       passed:
         - compile_pxf
@@ -213,7 +213,7 @@ jobs:
 
 - name: test_pxf_gcs
   plan:
-  - aggregate:
+  - in_parallel:
     - get: pxf_src
       passed:
         - compile_pxf
@@ -256,7 +256,7 @@ jobs:
 
 - name: test_pxf_wasbs
   plan:
-  - aggregate:
+  - in_parallel:
     - get: pxf_src
       passed:
         - compile_pxf
@@ -300,7 +300,7 @@ jobs:
 
 - name: test_pxf_adl
   plan:
-  - aggregate:
+  - in_parallel:
     - get: pxf_src
       passed:
         - compile_pxf
@@ -346,7 +346,7 @@ jobs:
 
 - name: test_pxf_minio
   plan:
-  - aggregate:
+  - in_parallel:
     - get: pxf_src
       passed:
         - compile_pxf
