Allow configurable PGPORT (#252)
In GPDB, a PORT_BASE [was introduced](https://github.com/greenplum-db/gpdb/commit/704d2bdcab3b3ba413abb1aaebbb365e487ca79c)
for demo cluster. In GPDB 7 base port is 7000.

--- a/concourse/pipelines/pxf_pr_pipeline.yml
+++ b/concourse/pipelines/pxf_pr_pipeline.yml
@@ -4,7 +4,7 @@ resource_types:
 - name: pull-request
   type: docker-image
   source:
-    repository: jtarchie/pr
+    repository: teliaoss/github-pr-resource
 
 resources:
 
@@ -17,7 +17,7 @@ resources:
 - name: pxf_src
   type: pull-request
   source:
-    repo: greenplum-db/pxf
+    repository: greenplum-db/pxf
     access_token: {{pxf-bot-access-token}}
 
 - name: gpdb-pxf-dev-centos6
@@ -41,13 +41,13 @@ jobs:
     params:
       path: pxf_src
       status: failure
-      context: $BUILD_JOB_NAME
+      context: compile_pxf
   on_success:
     put: pxf_src
     params:
       path: pxf_src
       status: success
-      context: $BUILD_JOB_NAME
+      context: compile_pxf
   plan:
   - get: pxf_src
     trigger: true
@@ -55,7 +55,7 @@ jobs:
     params:
       path: pxf_src
       status: pending
-      context: $BUILD_JOB_NAME
+      context: compile_pxf
   - in_parallel:
     - get: gpdb_src
     - get: gpdb-pxf-dev-centos6
@@ -70,13 +70,13 @@ jobs:
     params:
       path: pxf_src
       status: failure
-      context: $BUILD_JOB_NAME
+      context: test_pxf
   on_success:
     put: pxf_src
     params:
       path: pxf_src
       status: success
-      context: $BUILD_JOB_NAME
+      context: test_pxf
   plan:
   - get: pxf_src
     passed:
@@ -86,7 +86,7 @@ jobs:
     params:
       path: pxf_src
       status: pending
-      context: $BUILD_JOB_NAME
+      context: test_pxf
   - in_parallel:
     - get: gpdb_src
       passed:
@@ -100,11 +100,12 @@ jobs:
       - name: gpdb_src
       - name: pxf_src
       params:
+        GROUP: smoke,proxy
+        HADOOP_CLIENT: HDP
         IMPERSONATION: true
+        PGPORT: 7000
         TARGET_OS: centos
         TARGET_OS_VERSION: 6
-        HADOOP_CLIENT: HDP
-        GROUP: smoke,proxy
       run:
         path: pxf_src/concourse/scripts/test_pxf.bash
     timeout: 2h
