Fix the PROXY_USER for perf tests [ci skip]

--- a/concourse/pipelines/perf_pipeline.yml
+++ b/concourse/pipelines/perf_pipeline.yml
@@ -296,6 +296,7 @@ jobs:
             CLOUD_PROVIDER: google
             IMPERSONATION: {{enable-impersonation-multinode}}
             INSTALL_GPHDFS: {{perf-benchmark-gphdfs}}
+            PROXY_USER: gpadmin
             PXF_JVM_OPTS: {{pxf-jvm-opts}}
           on_failure:
             <<: *ccp_destroy
